updated design / fixed carousel

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ I enjoy prototyping interactive experiences and experimenting with Human Compute
       <!-- HARDWIRED -->
       <div class="intern-item card">
         <div class="carousel" data-autoslide>
-          <img src="assets/images/achievements/hardwiredana.jpg" alt="Hardwired ananya">
+          <!-- <img src="assets/images/achievements/hardwiredana.jpg" alt="Hardwired ananya"> -->
           <img src="assets/images/achievements/hardwired1.jpg" alt="Hardwired 1">
           <img src="assets/images/achievements/hardwired2.jpg" alt="Hardwired 2">
           <img src="assets/images/achievements/hardwired3.jpg" alt="Hardwired 3">
@@ -259,6 +259,6 @@ I enjoy prototyping interactive experiences and experimenting with Human Compute
   <div class="wrap"><small>© <span id="year"></span> Ananya Fulgaonkar</small></div>
 </footer>
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
