Updated CSS for responsiveness and layout fixes

--- a/index.html
+++ b/index.html
@@ -188,6 +188,162 @@ I enjoy prototyping interactive experiences and experimenting with Human Compute
     </div>
   </div>
 </section>
+<!-- PROJECTS -->
+<section id="projects" class="section soft">
+  <div class="wrap">
+    <h2>Projects</h2>
+
+    <!-- =================== IoT & Embedded Systems =================== -->
+    <div class="project-category">
+      <h3 class="project-subtitle">IoT & Embedded Systems</h3>
+      <div class="project-grid">
+
+        <div class="project-card">
+          <div class="project-icon">🔥</div>
+          <div class="project-body">
+            <h4>FAiMN — Firefighters’ Assistant IoT Monitoring Network</h4>
+            <p>
+              A wearable safety device that tracks firefighter vitals and environmental hazards in real-time.
+              Built with <strong>ESP32</strong>, <strong>LoRa</strong>, and multiple IoT sensors for safety alerts.
+            </p>
+            <!-- <p class="tags">#IoT #LoRa #EmbeddedSystems</p> -->
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-icon">🚰</div>
+          <div class="project-body">
+            <h4>Smart Solar Water ATM</h4>
+            <p>
+              Solar-powered smart water dispenser with <strong>RFID</strong> access, flow control,
+              and cloud data logging for government water tankers.
+            </p>
+            <!-- <p class="tags">#IoT #SolarEnergy #Automation</p> -->
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-icon">🤖</div>
+          <div class="project-body">
+            <h4>Line-Following Bot</h4>
+            <p>
+              Autonomous robot using <strong>IR sensors</strong> and <strong>L298N motor driver</strong>,
+              programmed on Arduino.
+            </p>
+            <!-- <p class="tags">#Arduino #Robotics #Simulation</p> -->
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-icon">🚑</div>
+          <div class="project-body">
+            <h4>Emergency Vehicle Clearance System</h4>
+            <p>
+              Smart traffic management using <strong>RFID</strong> and <strong>Arduino</strong> to
+              automatically give priority to emergency vehicles.
+            </p>
+            <!-- <p class="tags">#IoT #SmartCity #TrafficAutomation</p> -->
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-icon">👥</div>
+          <div class="project-body">
+            <h4>Pre-Stampede Detector</h4>
+            <p>
+              Crowd density monitoring system using <strong>Piezo sensors</strong> and <strong>Arduino</strong>
+              to detect unsafe surges and trigger early alerts.
+            </p>
+            <!-- <p class="tags">#IoT #SensorNetwork #SafetySystems</p> -->
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- =================== Software & Design Projects =================== -->
+    <div class="project-category">
+      <h3 class="project-subtitle">Software & Design Projects</h3>
+      <div class="project-grid">
+
+        <!-- <div class="project-card">
+          <div class="project-icon">👀</div>
+          <div class="project-body">
+            <h4>Virtual Mouse with Eye Recognition</h4>
+            <p>
+              Hands-free mouse control using <strong>OpenCV</strong> and <strong>Python</strong> for
+              real-time eye tracking — improving accessibility and human-computer interaction.
+            </p>
+            <p class="tags">#AI #OpenCV #Python</p>
+          </div>
+        </div> -->
+
+<div class="project-card">
+  <div class="project-icon">♻️</div>
+  <div class="project-body">
+    <h4>Ekooda — E-Waste Collection Platform</h4>
+    <p>
+      Designed a clean <strong>Figma</strong>-based website concept promoting sustainability
+      through simple and intuitive user experience.
+    </p>
+
+    <div class="behance-embed">
+      <iframe
+        src="https://www.behance.net/embed/project/223945967?ilo0=1"
+        allowfullscreen
+        loading="lazy"
+        frameborder="0"
+        allow="clipboard-write"
+        referrerpolicy="strict-origin-when-cross-origin">
+      </iframe>
+    </div>
+
+    <a href="https://www.behance.net/gallery/223945967/Ekooda-E-Waste-Collection-Platform"
+       target="_blank"
+       class="project-link">
+      View Full Project ↗
+    </a>
+  </div>
+</div>
+
+
+
+
+<div class="project-card">
+  <div class="project-icon">🍴</div>
+  <div class="project-body">
+    <h4>Southern Delights — Café Brand Design</h4>
+    <p>
+      A warm and minimal brand identity designed for a cozy café using soft color palettes and
+      balanced typography. Showcases logo, menu, and packaging concepts.
+    </p>
+
+    <div class="behance-embed">
+      <iframe
+        src="https://www.behance.net/embed/project/223945551?ilo0=1"
+        allowfullscreen
+        loading="lazy"
+        frameborder="0"
+        allow="clipboard-write"
+        referrerpolicy="strict-origin-when-cross-origin">
+      </iframe>
+    </div>
+
+    <a href="https://www.behance.net/gallery/223945551/Southern-Delights"
+       target="_blank"
+       class="project-link">
+      View Full Project ↗
+    </a>
+  </div>
+</div>
+
+
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 <!-- ACHIEVEMENTS -->
 <section id="achievements" class="section soft">
